objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>Host_Offtaker_Owner_Notes__c</fullName>
        <inlineHelpText>Changes, if any to owners &amp; host customer information.</inlineHelpText>
        <label>Host, Offtaker, Owner Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Host__c</fullName>
        <inlineHelpText>The customer that receives the net metering credits.</inlineHelpText>
        <label>OffTaker/Host</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interconnection_Application__c</fullName>
        <inlineHelpText>The name of the related Interconnection application.</inlineHelpText>
        <label>Interconnection Application</label>
        <referenceTo>Interconnection_Application__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Offtaker__c</fullName>
        <label>Offtaker</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <inlineHelpText>PV system owner.</inlineHelpText>
        <label>Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Size_AC_watts__c</fullName>
        <inlineHelpText>Inverter rating of system.</inlineHelpText>
        <label>System Size AC (watts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Size_DC_watts__c</fullName>
        <inlineHelpText>Module rating of system.</inlineHelpText>
        <label>System Size DC (watts)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Size_from_Project__c</fullName>
        <formula>Interconnection_Application__r.Project_Size_DC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is pulled in from the related project.</inlineHelpText>
        <label>System Size (from Project)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utility_Project_ID_Notes__c</fullName>
        <label>Utility Project ID Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WO_Notes__c</fullName>
        <inlineHelpText>Communication from utility on progress of their construction schedule.</inlineHelpText>
        <label>WO # Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WO__c</fullName>
        <inlineHelpText>Utility issued WO# specific to each project.</inlineHelpText>
        <label>WO #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Application</label>
    <nameField>
        <label>Utility Project ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>